# codeauris-ai-agents

./: .gitignore  LICENSE  README.md
llm_loop_example/: README.md  correction_agent.py  evaluation_agent.py  llm_client.py  llm_loop_agent.py
llm_loop_example/corrected_files/: final_doc.txt  step_1_Grammar_Correction.txt  step_2_Clarity_Improvement.txt  step_3_Style_Refinement.txt  step_4_Conciseness_Adjustment.txt
llm_loop_example/resources/: correction_instructions.txt  document.txt  evaluation_instructions.txt  steps.json
llm_tool_youtube_video_agent/: README.md
mcp-gateway/: README.md  database_operations.py  llm_call_methods.py  mcp_gateway.py  mcp_handlers.py  pyproject.toml  requirements.txt
mcp-gateway/mcp_prompts/: prompt_code_review.py  prompt_data_analysis.py  prompt_research_assistant.py  prompt_technical_writer.py
mcp-gateway/mcp_resources/: resource_analytics.py  resource_conversation.py  resource_document.py  resource_system.py
mcp-gateway/mcp_tools/: tool_code_assistant.py  tool_data_processor.py  tool_file_manager.py  tool_llm_query.py  tool_web_researcher.py
mcp-server-example/: README.md  mcp_app.py  mcp_prompt.py  mcp_resource.py  mcp_tool.py
mcp-server-example/resources/: codeauris.txt  email_template.txt  kodex_academy.txt
mongodb-mcp-server-example/: README.md  docker-compose.yml
mongodb-mcp-server-example/mcp-inspector/: Dockerfile
mongodb-mcp-server-example/mcp-server/: Dockerfile
mongodb-mcp-server-example/mongodata/mcpdb_data/: airline.bson  airline.metadata.json  airport.bson  airport.metadata.json  inventory_hotel.metadata.json  inventory_landmark.bson  inventory_landmark.metadata.json  route.metadata.json  tenant_agent_00_users.bson  tenant_agent_00_users.metadata.json  (+8 more)
single-page-report-app/: Dockerfile  README.md
single-page-report-app/client/: index.html  package.json
single-page-report-app/server/: index.js  package-lock.json  package.json
(+1 files in other folders)
